--- a/TODO
+++ b/TODO
@@ -1,6 +1,1 @@
-Create backend stuff for:
-    1. Caching images
-    2. Making API calls
-
-Create classes for everything.
-    (Should I do this all in one file...? It might make things a bit easier to handle, but it could also be a giant mess.)
+Nothing right now. I'll be keeping an eye on the git issues for a while tho, and changing things as needed.
